--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.3.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
